Add core app with backup system

--- a/Pipfile
+++ b/Pipfile
@@ -29,6 +29,8 @@ discord-webhook = "*"
 imgkit = "*"
 django-dbbackup = "*"
 django-extensions = "*"
+django-backup = "*"
+psycopg2 = "*"
 
 [dev-packages]
 
